qcacld-2.0: Remove WLAN_FEATURE_HOLD_RX_WAKELOCK feature
- WLAN_FEATURE_HOLD_RX_WAKELOCK feature acquires 50 ms wake lock
  for every rx data packet.
- Remove this feature such that we can avoid wake lock for every
  RX data packet.

Change-Id: I4c7d19d1161cdd6b7e6545569913d3b9235be06d
CRs-Fixed: 929621
Git-commit: dbb33768e1995ab692aaa284d730b5ddbc2a05cf
Bug: 24995633
Signed-off-by: Amarnath Hullur Subramanyam <amarnath@codeaurora.org>

--- a/drivers/staging/qcacld-2.0/Kconfig
+++ b/drivers/staging/qcacld-2.0/Kconfig
@@ -47,4 +47,8 @@ config ENABLE_LINUX_REG
 	bool "Enable linux regulatory feature"
 	default y
 
+config WLAN_FEATURE_RX_WAKELOCK
+	bool "Enable RX wake lock feature"
+	default n
+
 endif # QCA_CLD_WLAN
