--- a/arch/arm/configs/quark_defconfig
+++ b/arch/arm/configs/quark_defconfig
@@ -692,7 +692,7 @@ CONFIG_PM=y
 # CONFIG_APM_EMULATION is not set
 CONFIG_PM_CLK=y
 CONFIG_CPU_PM=y
-CONFIG_SUSPEND_TIME=y
+# CONFIG_SUSPEND_TIME is not set
 CONFIG_QUICK_WAKEUP=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
@@ -4430,4 +4430,4 @@ CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_MSM_CPU_VOLTAGE_CONTROL=y
 CONFIG_TCP_CONG_SOCIOPATH=y
 CONFIG_PM_SYNC_BEFORE_SUSPEND=y
-CONFIG_SUSPEND_TIME_TIMEKEEPING=y
+# CONFIG_SUSPEND_TIME_TIMEKEEPING is not set
