--- a/arch/arm/configs/bhb27kernel_defconfig
+++ b/arch/arm/configs/bhb27kernel_defconfig
@@ -4460,3 +4460,4 @@ CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_FIFO=y
 CONFIG_PM_SYNC_BEFORE_SUSPEND=y
 CONFIG_SUSPEND_TIME_TIMEKEEPING=y
+CONFIG_IOSCHED_SWITCHER=y
